tests/compError/missingProperty.ucl
// testSkip
// compError
// error: property 'missingProperty' does not exist on struct
// tests/compError/missingProperty.ucl:11 -> struct defined here
// tests/compError/missingProperty.ucl:8 -> missing property defined here

const Test = struct {
	property a: Number;
	property missingProperty: Number;
};

var test = struct: Test {
	a = 100;
};